--- a/thesis/06-conclusions.tex
+++ b/thesis/06-conclusions.tex
@@ -29,6 +29,12 @@ We \JH{continue}
 \paragraph{Future Work.}
 \JH{One future work is to implement the quantization into the NAT models.}
 
+\JH{Paragraph about gender bias in knowledge distillation
+  https://aclanthology.org/2021.emnlp-main.803}
+
+\JH{JL: do future taky můžeš napsat, že taky můžeš oměřit další věci, třeba
+  morpheval a performance na jinejch doménách}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "thesis"
