--- a/thesis/list_of_publications.tex
+++ b/thesis/list_of_publications.tex
@@ -1,97 +1,101 @@
 \chapter*{List of Publications}
 
-TODO tohle se musí přepsat
-
 \phantom{\nobibliography*{references}}
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\noindent\bibentry{libovicky-etal-2016-cuni}
+% citace pocitany 9.11.2021
+
+% -----------------------------------------------------------------------------
+\noindent\bibentry{helcl-libovicky-2017-neural}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-    \item The paper describes a submission to the WMT16 which describes our early
-        experiments with multimodal machine translation.
+\item This paper introduces a software tool \emph{Neural Monkey} which was used
+  for the experiments in Chapter \ref{chap:nar-nmt-ctc} of this thesis.
 
-    \item Citations (without self-citations): \JH{todo}
-
+\item Citations (without self-citations): 54
+  % 61 citations minus 7 self
 \end{itemize}\vspace{3mm}
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-
+% -----------------------------------------------------------------------------
 \noindent\bibentry{libovicky-helcl-2017-attention}
 \begin{itemize}[noitemsep,topsep=0pt]
 
 \item The paper introduces techniques for combining multiple different inputs
-  in sequence-to-sequence learning using \acp{rnn} Awarded as an Outstanding
-  Paper at ACL~2017 and ÚFAL Best Paper 2017.
+  in sequence-to-sequence learning using RNNs.
+\item Selected as an Outstanding Paper at ACL~2017.
 
-  \item Citations (without self-citations): \JH{todo}
-
+\item Citations (without self-citations): 140
+  % 144 minus 4 self-citations
 \end{itemize}\vspace{3mm}
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-
-\noindent\bibentry{helcl-libovicky-2017-neural}
+% -----------------------------------------------------------------------------
+\noindent\bibentry{miceli-barone-etal-2017-deep}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-  \item This paper introduces a software tool \emph{Neural Monkey} which was
-      used for all the experiments in this thesis.
+\item This paper explores deep architectures of RNN-based neural networks for
+  MT.
 
-  \item Citations (without self-citations): \JH{todo}
+\item Citations (without self-citations): 80
+  % 80 minus 0 self-citations
+\end{itemize}
 
-\end{itemize}\vspace{3mm}
-
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-
-\newpage
-\noindent\bibentry{helcl-libovicky-2017-cuni}
-\begin{itemize}[noitemsep,topsep=0pt]
-
-\item A submission to WMT17 multimodal machine translation task.
-
-  \item Citations (without self-citations): \JH{todo}
-
-\end{itemize}\vspace{3mm}
-
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-
+% -----------------------------------------------------------------------------
 \noindent\bibentry{helcl-etal-2018-neural}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-  \item A paper summarizing the Neural Monkey software at the beginning of
-      2018.
+\item A paper summarizing the Neural Monkey software at the beginning of 2018.
 
-  \item Citations (without self-citations): \JH{todo}
-
+\item Citations (without self-citations): 7
+  % 7 total 0 self
 \end{itemize}\vspace{3mm}
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-
+% -----------------------------------------------------------------------------
 \noindent\bibentry{libovicky-etal-2018-input}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-  \item The paper introduces techniques for input combinations in
-      sequence-to-sequence models with self-attentive encoder and decoder.
+\item The paper introduces techniques for input combinations in
+  sequence-to-sequence models with self-attentive encoder and decoder.
 
-  \item Citations (without self-citations): \JH{todo}
-
+\item Citations (without self-citations): 43
+  % 43 total 0 self
 \end{itemize}\vspace{3mm}
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-
-\noindent\bibentry{helcl-etal-2018-cuni}
+% -----------------------------------------------------------------------------
+\noindent\bibentry{libovicky-helcl-2018-end}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-  \item A paper summarizing the Neural Monkey software at the beginning of
-      2018. \JH{todo}
+\item In this paper we introduce the novel CTC-based approach for
+  non-autoregressive neural machine translation, described in
+  Chapter~\ref{chap:nar-nmt-ctc} and extended in
+  Chapter~\ref{chap:experiments}.
 
-  \item Citations (without self-citations): 0
-
+\item Citations (without self-citations): 67
+  % 67 total 0 self
 \end{itemize}\vspace{3mm}
 
-\vspace{1cm}
+% -----------------------------------------------------------------------------
+\noindent\bibentry{chen-etal-2021-university}
+\begin{itemize}[noitemsep,topsep=0pt]
+
+\item This system description presents the University of Edinburgh's
+  submissions to the WMT~21 News Translation Shared Task. The teacher models
+  described in this paper were used in Chapter~\ref{chap:experiments}.
+
+\item Citations (without self-citations): 0 \JH{TODO mozna jedna z findings?}
+  % 0 total 0 self
+\end{itemize}\vspace{3mm}
+% -----------------------------------------------------------------------------
+
+\vfill
 
 \noindent Only publications relevant to this thesis are included. The number of
 citations was computed using Google Scholar. Total number of citations of
-publication related to the topic of the thesis (without self-citations):
-{\large 77} (by the thesis submission on March 21, 2019).
+publications related to the topic of the thesis (without self-citations):
+{\large 391} % (by the thesis submission on November 17, 2021).
+
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "thesis"
+%%% End:
