--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -184,24 +184,24 @@
 
 *** Shortlist at 36 CPU cores
 
-    |---------+-------+------+-------+-------+-------+------+------|
-    | Batch   |     1 |    2 |     4 |     8 |    16 |   32 |   64 |
-    |---------+-------+------+-------+-------+-------+------+------|
-    | AR Big  |       |      |       |       |       |      |      |
-    | AR Base |       |      | 18914 | 13597 | 10946 | 9643 | 9154 |
-    |---------+-------+------+-------+-------+-------+------+------|
-    | Large   | 12799 | 9870 |  8245 |  7545 |  7434 | 7511 | 7639 |
-    | Base    |  2549 | 2298 |  2263 |  2306 |  2399 | 2503 | 2609 |
-    | Small   |  1346 | 1246 |  1250 |  1306 |  1399 | 1497 | 1606 |
-    | Micro   |   958 |  897 |   913 |   974 |  1062 | 1163 | 1271 |
-    | Tiny    |   244 |  246 |   273 |   316 |   373 |  437 |  506 |
-    |---------+-------+------+-------+-------+-------+------+------|
+    |---------+-------+-------+-------+-------+-------+------+------|
+    | Batch   |     1 |     2 |     4 |     8 |    16 |   32 |   64 |
+    |---------+-------+-------+-------+-------+-------+------+------|
+    | AR Big  |       |       |       |       |       |      |      |
+    | AR Base |       | 27977 | 18914 | 13597 | 10946 | 9643 | 9154 |
+    |---------+-------+-------+-------+-------+-------+------+------|
+    | Large   | 12799 |  9870 |  8245 |  7545 |  7434 | 7511 | 7639 |
+    | Base    |  2549 |  2298 |  2263 |  2306 |  2399 | 2503 | 2609 |
+    | Small   |  1346 |  1246 |  1250 |  1306 |  1399 | 1497 | 1606 |
+    | Micro   |   958 |   897 |   913 |   974 |  1062 | 1163 | 1271 |
+    | Tiny    |   244 |   246 |   273 |   316 |   373 |  437 |  506 |
+    |---------+-------+-------+-------+-------+-------+------+------|
 
 **** Export
 
     | Batch | AR Big | AR Base | Large | Base | Small | Micro | Tiny |
     |     1 |        |         | 12799 | 2549 |  1346 |   958 |  244 |
-    |     2 |        |         |  9870 | 2298 |  1246 |   897 |  246 |
+    |     2 |        |   27977 |  9870 | 2298 |  1246 |   897 |  246 |
     |     4 |        |   18914 |  8245 | 2263 |  1250 |   913 |  273 |
     |     8 |        |   13597 |  7545 | 2306 |  1306 |   974 |  316 |
     |    16 |        |   10946 |  7434 | 2399 |  1399 |  1062 |  373 |
@@ -248,7 +248,7 @@
      | Tiny            |  1916 |  1295 |   960 |   803 |   730 |   687 |  666 |  652 |
      |-----------------+-------+-------+-------+-------+-------+-------+------+------|
 
-**** Export
+***** Export
 
      transposed for gnuplot:
 
@@ -278,7 +278,7 @@
      | Tiny            | 1360 |   780 |   503 |   367 |  301 |  273 |  252 |  243 |
      |-----------------+------+-------+-------+-------+------+------+------+------|
 
-**** Export
+***** Export
 
      | Batch size | Ar Large | Ar Base (stdnt) | Large | Base | Small | Micro | Tiny |
      |          1 |          |                 |  7020 | 6289 |  3300 |  2322 | 1360 |
