--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,17 @@
+@inproceedings{libovicky2018solving,
+  title={Solving Three Czech NLP Tasks with End-to-end Neural Models.},
+  author={Libovick{\`y}, Jindrich and Rosa, Rudolf and Helcl, Jindrich and Popel, Martin},
+  booktitle={ITAT},
+  pages={138--143},
+  year={2018}
+}
+@article{bojar2016ufal,
+  title={UFAL submissions to the IWSLT 2016 MT track},
+  author={Bojar, Ondrej and Sudarikov, Roman and Kocmi, Tom and Helcl, Jindrich and C{\i}fka, Ondrej},
+  journal={IWSLT. Seattle, WA},
+  year={2016}
+}
+
 @article{kocmi2021ship,
   title={To ship or not to ship: An extensive evaluation of automatic metrics for machine translation},
   author={Kocmi, Tom and Federmann, Christian and Grundkiewicz, Roman and Junczys-Dowmunt, Marcin and Matsushita, Hitokazu and Menezes, Arul},
