--- a/thesis/list_of_publications.tex
+++ b/thesis/list_of_publications.tex
@@ -14,7 +14,7 @@
 
 \item Citations (without self-citations): 54
   % 61 citations minus 7 self
-\end{itemize}\vspace{3mm}
+\end{itemize}\vspace{.5\baselineskip}
 
 % -----------------------------------------------------------------------------
 \noindent\bibentry{libovicky-helcl-2017-attention}
@@ -26,7 +26,7 @@
 
 \item Citations (without self-citations): 140
   % 144 minus 4 self-citations
-\end{itemize}\vspace{3mm}
+\end{itemize}\vspace{.5\baselineskip}
 
 % -----------------------------------------------------------------------------
 \noindent\bibentry{miceli-barone-etal-2017-deep}
@@ -37,7 +37,7 @@
 
 \item Citations (without self-citations): 80
   % 80 minus 0 self-citations
-\end{itemize}
+\end{itemize}\vspace{.5\baselineskip}
 
 % -----------------------------------------------------------------------------
 \noindent\bibentry{helcl-etal-2018-neural}
@@ -47,7 +47,7 @@
 
 \item Citations (without self-citations): 7
   % 7 total 0 self
-\end{itemize}\vspace{3mm}
+\end{itemize}\vspace{.5\baselineskip}
 
 % -----------------------------------------------------------------------------
 \noindent\bibentry{libovicky-etal-2018-input}
@@ -58,7 +58,7 @@
 
 \item Citations (without self-citations): 43
   % 43 total 0 self
-\end{itemize}\vspace{3mm}
+\end{itemize}\vspace{.5\baselineskip}
 
 % -----------------------------------------------------------------------------
 \noindent\bibentry{libovicky-helcl-2018-end}
@@ -71,7 +71,7 @@
 
 \item Citations (without self-citations): 67
   % 67 total 0 self
-\end{itemize}\vspace{3mm}
+\end{itemize}\vspace{.5\baselineskip}
 
 % -----------------------------------------------------------------------------
 \noindent\bibentry{chen-etal-2021-university}
@@ -83,7 +83,7 @@
 
 \item Citations (without self-citations): 0 \JH{TODO mozna jedna z findings?}
   % 0 total 0 self
-\end{itemize}\vspace{3mm}
+\end{itemize}\vspace{.5\baselineskip}
 % -----------------------------------------------------------------------------
 
 \vfill
