--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -478,33 +478,33 @@ translation quality in all model variants. \JH{distill vs non-distill?}
     & \multicolumn{4}{c}{Full output projection} & \multicolumn{4}{c}{Shortlist} \\
     & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}}
     & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
+
     \midrule
     Single greedy \acs{ar} \\
-    Large & 59.2 & 0.4110  & 50.5  & 1.3 & 00.0 & -0.0000 & 00.0 & 0.0 \\
-    Base & 58.1 & 0.3881 & 47.9 & 1.3 \\
+    Large & 59.2 & 0.4110 & 50.5 & 1.3 & 59.2 & 0.4124 & 50.6 & 1.3\\
+    Base  & 58.1 & 0.3881 & 47.9 & 1.3 & 58.1 & 0.3875 & 47.9 & 1.2\\
+
     \addlinespace
     Single beam \acs{ar} \\
-    Large & 58.8 & 0.4053 & 50.8 & 1.3  \\
-    Base & 57.9 & 0.3873 & 48.0 & 1.3 \\
+    Large & 58.8 & 0.4053 & 50.8 & 1.3 & 58.8 & 0.4144 & 47.9 & 1.2\\
+    Base  & 57.9 & 0.3873 & 48.0 & 1.3 & 55.1 & 0.2666 & 39.3 & 1.1\\
+
     \addlinespace
     Ensemble beam \acs{ar} \\
-    Large & 59.5 & 0.4332 & 52.2 & 1.3 \\
+    Large & 59.5 & 0.4332 & 52.2 & 1.3 & 59.4 & 0.4303 & 52.2 & 1.3\\
+
     \midrule
     Student \acs{ar} \\
-    %Student (single, greedy) \acs{ar} \\
-    Base  & 59.5 & 0.4550 & 51.6 &  1.2 & 59.6 & & 51.6 & 1.2 \\
+    Base  & 59.5 &  0.4550 & 51.6 & 1.2 & 59.6 &  0.4564 & 51.6 & 1.2 \\
+
     \addlinespace
     \Acs{nar} models \\
-    Large & 58.6 &  0.1485 & 47.8 & 1.2 & 58.7 & & 47.7 & 1.2 \\
-    Base  & 56.3 & -0.0521 & 41.8 & 1.1 & 56.3 & & 41.8 & 1.1 \\
-    Small & 56.2 & -0.0752 & 41.9 & 1.1 & 56.2 & & 41.9 & 1.2 \\
-    Micro & 57.3 & -0.0083 & 43.5 & 1.1 & 57.4 & & 43.6 & 1.1 \\
-    Tiny  & 53.6 & -0.3333 & 34.7 & 1.0 & 53.8 & & 34.8 & 1.0 \\
-    % Large & 58.6 & 0.0909 & 47.4 & 1.1 \\
-    % Base & 56.2 & -0.0914 & 41.4 & 1.1 \\
-    % Small & 56.2 & -0.0957 & 41.7 & 1.1 \\
-    % Micro & 57.2 & -0.0631 & 43.2 & 1.1 \\
-    % Tiny & 53.6 & -0.3971 & 34.5 & 1.0  \\
+    Large & 58.6 &  0.1485 & 47.8 & 1.2 & 58.7 &  0.1442 & 47.7 & 1.2 \\
+    Base  & 56.3 & -0.0521 & 41.8 & 1.1 & 56.3 & -0.0545 & 41.8 & 1.1 \\
+    Small & 56.2 & -0.0752 & 41.9 & 1.1 & 56.2 & -0.0773 & 41.9 & 1.2 \\
+    Micro & 57.3 & -0.0083 & 43.5 & 1.1 & 57.4 & -0.0085 & 43.6 & 1.1 \\
+    Tiny  & 53.6 & -0.3333 & 34.7 & 1.0 & 53.8 & -0.3346 & 34.8 & 1.0 \\
+
     \bottomrule
   \end{tabular}
 
@@ -526,32 +526,33 @@ translation quality in all model variants. \JH{distill vs non-distill?}
     & \multicolumn{4}{c}{Full output projection} & \multicolumn{4}{c}{Shortlist} \\
     & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}}
                  & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
+
     \midrule
     Single greedy \acs{ar} \\
-    Large & 61.9 & 0.5868 & 48.4 & 1.3 & 00.0 & -0.0000 & 00.0 & 0.0 \\
-    Base & 61.0 & 0.5532 & 47.0 & 1.3 \\
+    Large & 61.9 & 0.5868 & 48.4 & 1.3 & 61.9 & 0.5866 & 48.5 & 1.3\\
+    Base  & 61.0 & 0.5532 & 47.0 & 1.3 & 60.5 & 0.5534 & 47.1 & 1.3\\
+
     \addlinespace
     Single beam \acs{ar} \\
-    Large & 61.5 & 0.5885 & 49.2 & 1.2 \\
-    Base & 60.7 & 0.5535 & 47.4 & 1.3 \\
+    Large & 61.5 & 0.5885 & 49.2 & 1.2 & 61.2 & 0.5659 & 43.9 & 1.1\\
+    Base  & 60.7 & 0.5534 & 47.4 & 1.3 & 58.0 & 0.4591 & 38.5 & 1.2\\
+
     \addlinespace
     Ensemble beam \acs{ar} \\
-    Large & 62.1 & 0.5954 & 50.6 & 1.3 \\
+    Large & 62.0 & 0.5954 & 50.6 & 1.3 & 62.3 & 0.5970 & 50.8 & 1.3\\
+
     \midrule
     Student \acs{ar} \\
-    Base & 63.3 & 0.6115 & 51.1 & 1.3 & 63.3 & & 51.1 & 1.3 \\
+    Base & 63.3 & 0.6115 & 51.1 & 1.3 & 63.3 & 0.6112 & 51.1 & 1.3\\
+
     \addlinespace
     \Acs{nar} models \\
-    Large & 61.6 &  0.3296 & 46.4 & 1.4 & 61.6 & & 46.4 & 1.4 \\
-    Base  & 61.4 &  0.2957 & 45.8 & 1.3 & 61.4 & & 45.7 & 1.3 \\
-    Small & 61.0 &  0.2462 & 44.6 & 1.3 & 61.0 & & 44.6 & 1.3 \\
-    Micro & 59.6 &  0.1475 & 42.3 & 1.4 & 59.6 & & 42.3 & 1.4 \\
-    Tiny  & 55.9 & -0.1558 & 34.4 & 1.3 & 55.9 & & 34.4 & 1.3 \\
-    % Large & 61.6 &  0.3120 & 45.3 & 1.3 \\
-    % Base  & 61.3 &  0.2706 & 44.9 & 1.2 \\
-    % Small & 61.0 &  0.2194 & 43.9 & 1.2 \\
-    % Micro & 59.6 &  0.1169 & 41.8 & 1.3 \\
-    % Tiny  & 55.8 & -0.1800 & 34.2 & 1.3 \\
+    Large & 61.6 &  0.3296 & 46.4 & 1.4 & 61.6 &  0.3288 & 46.4 & 1.4\\
+    Base  & 61.4 &  0.2957 & 45.8 & 1.3 & 61.4 &  0.2663 & 45.7 & 1.3\\
+    Small & 61.0 &  0.2462 & 44.6 & 1.3 & 61.0 &  0.2454 & 44.6 & 1.3\\
+    Micro & 59.6 &  0.1475 & 42.3 & 1.4 & 59.6 &  0.1468 & 42.3 & 1.4\\
+    Tiny  & 55.9 & -0.1558 & 34.4 & 1.3 & 55.9 & -0.1560 & 34.4 & 1.3\\
+
     \bottomrule
   \end{tabular}
 
@@ -771,14 +772,14 @@ Table \ref{tab:exp:cpu} shows
     \toprule
     Batch size & 1 & 2 & 4 & 8 & 16 & 32 & 64 & 128 \\
     \midrule
-    \acs{ar} -- Large &&  &  &  &  &  & \\
-    \acs{ar} -- Base  &&  & 18,914 & 13,597 & 10,946 & 9,643 & 9,154 \\
+    \acs{ar} -- Large &&  &  &  &  &  & & \\
+    \acs{ar} -- Base  &&  & 18,914 & 13,597 & 10,946 & 9,643 & 9,154 & \\
     \midrule
-    Large & 12,799 & 9,870 & 8,245 & 7,545 & 7,434 & 7,511 & 7,639 \\
-    Base  &  2,549 & 2,298 & 2,263 & 2,306 & 2,399 & 2,503 & 2,609 \\
-    Small &  1,346 & 1,246 & 1,250 & 1,306 & 1,399 & 1,497 & 1,606 \\
-    Micro &    958 &   897 &   913 &   974 & 1,062 & 1,163 & 1,271 \\
-    Tiny  &    244 &   246 &   273 &   316 &   373 &   437 &   506 \\
+    Large & 12,799 & 9,870 & 8,245 & 7,545 & 7,434 & 7,511 & 7,639 & \\
+    Base  &  2,549 & 2,298 & 2,263 & 2,306 & 2,399 & 2,503 & 2,609 & 2,707 \\
+    Small &  1,346 & 1,246 & 1,250 & 1,306 & 1,399 & 1,497 & 1,606 & 1,714 \\
+    Micro &    958 &   897 &   913 &   974 & 1,062 & 1,163 & 1,271 & 1,380 \\
+    Tiny  &    244 &   246 &   273 &   316 &   373 &   437 &   506 &   582 \\
     \bottomrule
   \end{tabular}
 
