--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -36,6 +36,7 @@
 \newacronym{nar}{NAR}{non-autoregressive}
 \newacronym{nlp}{NLP}{natural language processing}
 \newacronym{nmt}{NMT}{neural machine translation}
+\newacronym{nn}{NN}{neural network}
 \newacronym{npd}{NPD}{noisy parallel decoding}
 \newacronym{oaxe}{OaXE}{order-agnostic cross-entropy}
 \newacronym{odd}{ODD}{optimal deduplicated decoding}
