--- a/thesis/img/throughputs/cpu-shortlist.tex
+++ b/thesis/img/throughputs/cpu-shortlist.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Tue 09 Nov 2021 12:40:24 PM GMT
+%% Wed 10 Nov 2021 01:51:08 PM GMT
 \path (0.000,0.000) rectangle (13.500,8.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -67,7 +67,7 @@
 \node[gp node right] at (12.031,6.818) {\acs{ar} Base};
 \gpcolor{rgb color={0.800,0.800,0.800}}
 \draw[gp path] (12.215,6.818)--(12.579,6.818);
-\draw[gp path] (6.618,7.064)--(8.201,5.879)--(9.783,5.296)--(11.365,5.077);
+\draw[gp path] (6.200,7.691)--(6.618,7.064)--(8.201,5.879)--(9.783,5.296)--(11.365,5.077);
 \gppoint{gp mark 2}{(6.618,7.064)}
 \gppoint{gp mark 2}{(8.201,5.879)}
 \gppoint{gp mark 2}{(9.783,5.296)}
@@ -92,7 +92,7 @@
 \gpcolor{rgb color={1.000,0.800,0.000}}
 \draw[gp path] (12.215,5.894)--(12.579,5.894);
 \draw[gp path] (1.872,2.125)--(3.454,2.012)--(5.036,1.997)--(6.618,2.016)--(8.201,2.058)%
-  --(9.783,2.104)--(11.365,2.151);
+  --(9.783,2.104)--(11.365,2.151)--(12.947,2.195);
 \gppoint{gp mark 4}{(1.872,2.125)}
 \gppoint{gp mark 4}{(3.454,2.012)}
 \gppoint{gp mark 4}{(5.036,1.997)}
@@ -100,13 +100,14 @@
 \gppoint{gp mark 4}{(8.201,2.058)}
 \gppoint{gp mark 4}{(9.783,2.104)}
 \gppoint{gp mark 4}{(11.365,2.151)}
+\gppoint{gp mark 4}{(12.947,2.195)}
 \gppoint{gp mark 4}{(12.397,5.894)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,5.432) {Small};
 \gpcolor{rgb color={0.800,0.000,1.000}}
 \draw[gp path] (12.215,5.432)--(12.579,5.432);
 \draw[gp path] (1.872,1.587)--(3.454,1.542)--(5.036,1.544)--(6.618,1.569)--(8.201,1.610)%
-  --(9.783,1.654)--(11.365,1.703);
+  --(9.783,1.654)--(11.365,1.703)--(12.947,1.751);
 \gppoint{gp mark 5}{(1.872,1.587)}
 \gppoint{gp mark 5}{(3.454,1.542)}
 \gppoint{gp mark 5}{(5.036,1.544)}
@@ -114,13 +115,14 @@
 \gppoint{gp mark 5}{(8.201,1.610)}
 \gppoint{gp mark 5}{(9.783,1.654)}
 \gppoint{gp mark 5}{(11.365,1.703)}
+\gppoint{gp mark 5}{(12.947,1.751)}
 \gppoint{gp mark 5}{(12.397,5.432)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.970) {Micro};
 \gpcolor{rgb color={0.000,0.000,0.800}}
 \draw[gp path] (12.215,4.970)--(12.579,4.970);
 \draw[gp path] (1.872,1.413)--(3.454,1.386)--(5.036,1.393)--(6.618,1.420)--(8.201,1.460)%
-  --(9.783,1.505)--(11.365,1.553);
+  --(9.783,1.505)--(11.365,1.553)--(12.947,1.602);
 \gppoint{gp mark 6}{(1.872,1.413)}
 \gppoint{gp mark 6}{(3.454,1.386)}
 \gppoint{gp mark 6}{(5.036,1.393)}
@@ -128,13 +130,14 @@
 \gppoint{gp mark 6}{(8.201,1.460)}
 \gppoint{gp mark 6}{(9.783,1.505)}
 \gppoint{gp mark 6}{(11.365,1.553)}
+\gppoint{gp mark 6}{(12.947,1.602)}
 \gppoint{gp mark 6}{(12.397,4.970)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.508) {Tiny};
 \gpcolor{rgb color={0.000,0.800,0.000}}
 \draw[gp path] (12.215,4.508)--(12.579,4.508);
 \draw[gp path] (1.872,1.094)--(3.454,1.095)--(5.036,1.107)--(6.618,1.126)--(8.201,1.152)%
-  --(9.783,1.180)--(11.365,1.211);
+  --(9.783,1.180)--(11.365,1.211)--(12.947,1.245);
 \gppoint{gp mark 7}{(1.872,1.094)}
 \gppoint{gp mark 7}{(3.454,1.095)}
 \gppoint{gp mark 7}{(5.036,1.107)}
@@ -142,6 +145,7 @@
 \gppoint{gp mark 7}{(8.201,1.152)}
 \gppoint{gp mark 7}{(9.783,1.180)}
 \gppoint{gp mark 7}{(11.365,1.211)}
+\gppoint{gp mark 7}{(12.947,1.245)}
 \gppoint{gp mark 7}{(12.397,4.508)}
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
