--- a/thesis/list_of_publications.tex
+++ b/thesis/list_of_publications.tex
@@ -20,8 +20,8 @@
 \noindent\bibentry{libovicky-helcl-2017-attention}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-\item The paper introduces techniques for combining multiple different inputs
-  in sequence-to-sequence learning using RNNs.
+\item In this paper we introduce techniques for combining multiple different
+  inputs in sequence-to-sequence learning using RNNs.
 \item Selected as an Outstanding Paper at ACL~2017.
 
 \item Citations (without self-citations): 140
@@ -53,7 +53,7 @@
 \noindent\bibentry{libovicky-etal-2018-input}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-\item The paper introduces techniques for input combinations in
+\item The paper introduces different strategies for input combination in
   sequence-to-sequence models with self-attentive encoder and decoder.
 
 \item Citations (without self-citations): 43
@@ -64,10 +64,9 @@
 \noindent\bibentry{libovicky-helcl-2018-end}
 \begin{itemize}[noitemsep,topsep=0pt]
 
-\item In this paper we introduce the novel CTC-based approach for
-  non-autoregressive neural machine translation, described in
-  Chapter~\ref{chap:nar-nmt-ctc} and extended in
-  Chapter~\ref{chap:experiments}.
+\item This paper introduces the novel CTC-based approach for non-autoregressive
+  neural machine translation, described in Chapter~\ref{chap:nar-nmt-ctc} and
+  extended in Chapter~\ref{chap:experiments}.
 
 \item Citations (without self-citations): 67
   % 67 total 0 self
@@ -81,8 +80,8 @@
   submissions to the WMT~21 News Translation Shared Task. The teacher models
   described in this paper were used in Chapter~\ref{chap:experiments}.
 
-\item Citations (without self-citations): 0 \JH{TODO mozna jedna z findings?}
-  % 0 total 0 self
+\item Citations (without self-citations): 0
+  % 0 total 0 self (1 from findings)
 \end{itemize}\vspace{.5\baselineskip}
 % -----------------------------------------------------------------------------
 
