--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -11,60 +11,61 @@
 ** English-German
 
    #+NAME: endetrqual
-   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
-   |                           | Full Output: |        |        |          |         |         |         |           |      |          |   | With Shortlist: |        |        |      |         |         |         |           |      |          |
-   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
-   | Model                     |       ChrF A | ChrF C | ChrF D | ChrF Avg | COMET A | COMET C | COMET D | COMET Avg | BLEU | BLEU Var |   |          Chrf A | Chrf C | Chrf D |  0.0 | COMET A | COMET C | COMET D | COMET Avg | BLEU | BLEU Var |
-   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
-   | Single greedy AR          |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   | Large                     |         56.4 |   61.0 |   60.1 |     59.2 |  0.3801 |  0.4341 |  0.4189 |    0.4110 | 50.5 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   | Base                      |         55.6 |   59.9 |   58.9 |     58.1 |  0.3594 |  0.4088 |  0.3962 |    0.3881 | 47.9 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   | Single beam AR            |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   | Large                     |         56.1 |   60.5 |   59.8 |     58.8 |  0.3770 |  0.4257 |  0.4133 |    0.4053 | 50.8 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   | Base                      |         55.4 |   59.7 |   58.6 |     57.9 |  0.3598 |  0.4067 |  0.3955 |    0.3873 | 48.0 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   | Ensemble beam AR          |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   | Large                     |         56.5 |   61.4 |   60.5 |     59.5 |  0.4015 |  0.4571 |  0.4411 |    0.4332 | 52.2 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
-   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
-   | Student AR                |              |        |        |          |         |         |         |           |      |          |   |            57.0 |   61.5 |   60.4 | 59.6 |         |         |         |           | 51.6 |      1.2 |
-   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |           |      |          |
-   | Non-autoregressive models |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |           |      |          |
-   | Large                     |         55.9 |   60.5 |   59.4 |     58.6 |  0.1155 |  0.1756 |  0.1544 |    0.1485 | 47.8 |      1.2 |   |            56.0 |   60.6 |   59.5 | 58.7 |         |         |         |           | 47.7 |      1.2 |
-   | Base                      |         54.1 |   58.0 |   56.7 |     56.3 | -0.0753 | -0.0282 | -0.0528 |   -0.0521 | 41.8 |      1.1 |   |            54.1 |   58.0 |   56.8 | 56.3 |         |         |         |           | 41.8 |      1.1 |
-   | Small                     |         54.0 |   57.9 |   56.8 |     56.2 | -0.1024 | -0.0500 | -0.0731 |   -0.0752 | 41.9 |      1.1 |   |            53.9 |   57.9 |   56.7 | 56.2 |         |         |         |           | 41.9 |      1.2 |
-   | Micro                     |         55.1 |   58.9 |   57.8 |     57.3 | -0.0338 |  0.0159 | -0.0071 |   -0.0083 | 43.5 |      1.1 |   |            55.2 |   59.0 |   58.0 | 57.4 |         |         |         |           | 43.6 |      1.1 |
-   | Tiny                      |         51.8 |   55.0 |   54.0 |     53.6 | -0.3538 | -0.3116 | -0.3346 |   -0.3333 | 34.7 |      1.0 |   |            52.0 |   55.2 |   54.2 | 53.8 |         |         |         |           | 34.8 |      1.0 |
-   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+---------+------+----------|
+   |                           | Full Output: |        |        |          |         |         |         |           |      |          |   | With Shortlist: |        |        |      |         |         |         |         |      |          |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+---------+------+----------|
+   | Model                     |       ChrF A | ChrF C | ChrF D | ChrF Avg | COMET A | COMET C | COMET D | COMET Avg | BLEU | BLEU Var |   |          Chrf A | Chrf C | Chrf D |      | COMET A | COMET C | COMET D |         | BLEU | BLEU Var |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+---------+------+----------|
+   | Single greedy AR          |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |         |      |          |
+   | Large                     |         56.4 |   61.0 |   60.1 |     59.2 |  0.3801 |  0.4341 |  0.4189 |    0.4110 | 50.5 |      1.3 |   |            56.4 |   61.0 |   60.1 | 59.2 |  0.3814 |  0.4356 |  0.4202 |  0.4124 | 50.6 |      1.3 |
+   | Base                      |         55.6 |   59.9 |   58.9 |     58.1 |  0.3594 |  0.4088 |  0.3962 |    0.3881 | 47.9 |      1.3 |   |            55.6 |   59.9 |   58.8 | 58.1 |  0.3587 |  0.4082 |  0.3956 |  0.3875 | 47.9 |      1.2 |
+   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |         |      |          |
+   | Single beam AR            |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |         |      |          |
+   | Large                     |         56.1 |   60.5 |   59.8 |     58.8 |  0.3770 |  0.4257 |  0.4133 |    0.4053 | 50.8 |      1.3 |   |            56.0 |   60.9 |   59.4 | 58.8 |  0.3842 |  0.4406 |  0.4183 |  0.4144 | 47.9 |      1.2 |
+   | Base                      |         55.4 |   59.7 |   58.6 |     57.9 |  0.3598 |  0.4067 |  0.3955 |    0.3873 | 48.0 |      1.3 |   |            52.9 |   56.9 |   55.5 | 55.1 |  0.2371 |  0.2896 |  0.2730 |  0.2666 | 39.3 |      1.1 |
+   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |         |      |          |
+   | Ensemble beam AR          |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |         |      |          |
+   | Large                     |         56.5 |   61.4 |   60.5 |     59.5 |  0.4015 |  0.4571 |  0.4411 |    0.4332 | 52.2 |      1.3 |   |            56.5 |   61.3 |   60.4 | 59.4 |  0.3990 |  0.4536 |  0.4382 |  0.4303 | 52.2 |      1.3 |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+---------+------+----------|
+   | Student AR                |         56.9 |   61.4 |   60.3 |     59.5 |  0.4245 |  0.4773 |  0.4633 |    0.4550 | 51.6 |      1.2 |   |            57.0 |   61.5 |   60.4 | 59.6 |  0.4260 |  0.4787 |  0.4646 |  0.4564 | 51.6 |      1.2 |
+   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |         |      |          |
+   | Non-autoregressive models |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |         |      |          |
+   | Large                     |         55.9 |   60.5 |   59.4 |     58.6 |  0.1155 |  0.1756 |  0.1544 |    0.1485 | 47.8 |      1.2 |   |            56.0 |   60.6 |   59.5 | 58.7 |  0.1112 |  0.1717 |  0.1498 |  0.1442 | 47.7 |      1.2 |
+   | Base                      |         54.1 |   58.0 |   56.7 |     56.3 | -0.0753 | -0.0282 | -0.0528 |   -0.0521 | 41.8 |      1.1 |   |            54.1 |   58.0 |   56.8 | 56.3 | -0.0779 | -0.0305 | -0.0550 | -0.0545 | 41.8 |      1.1 |
+   | Small                     |         54.0 |   57.9 |   56.8 |     56.2 | -0.1024 | -0.0500 | -0.0731 |   -0.0752 | 41.9 |      1.1 |   |            53.9 |   57.9 |   56.7 | 56.2 | -0.1045 | -0.0522 | -0.0751 | -0.0773 | 41.9 |      1.2 |
+   | Micro                     |         55.1 |   58.9 |   57.8 |     57.3 | -0.0338 |  0.0159 | -0.0071 |   -0.0083 | 43.5 |      1.1 |   |            55.2 |   59.0 |   58.0 | 57.4 | -0.0343 |  0.0161 | -0.0074 | -0.0085 | 43.6 |      1.1 |
+   | Tiny                      |         51.8 |   55.0 |   54.0 |     53.6 | -0.3538 | -0.3116 | -0.3346 |   -0.3333 | 34.7 |      1.0 |   |            52.0 |   55.2 |   54.2 | 53.8 | -0.3550 | -0.3128 | -0.3360 | -0.3346 | 34.8 |      1.0 |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+---------+------+----------|
    #+TBLFM: $5=vmean($2..$4);%0.1f
    #+TBLFM: $9=vmean($6..$8);%0.4f
    #+TBLFM: $16=vmean($13..$15);%0.1f
+   #+TBLFM: $20=vmean($17..$19);%0.4f
 
 **** Export
 
-   |---------------------------+----------+-----------+------+----------|
-   | Model                     | ChrF Avg | COMET Avg | BLEU | BLEU Var |
-   |---------------------------+----------+-----------+------+----------|
-   | Single greedy AR          |          |           |      |          |
-   | Large                     |     59.2 |    0.4110 | 50.5 |      1.3 |
-   | Base                      |     58.1 |    0.3881 | 47.9 |      1.3 |
-   |                           |          |           |      |          |
-   | Single beam AR            |          |           |      |          |
-   | Large                     |     58.8 |    0.4053 | 50.8 |      1.3 |
-   | Base                      |     57.9 |    0.3873 | 48.0 |      1.3 |
-   |                           |          |           |      |          |
-   | Ensemble beam AR          |          |           |      |          |
-   | Large                     |     59.5 |    0.4332 | 52.2 |      1.3 |
-   |---------------------------+----------+-----------+------+----------|
-   | Non-autoregressive models |          |           |      |          |
-   | Large                     |     58.6 |    0.1485 | 47.8 |      1.2 |
-   | Base                      |     56.3 |   -0.0521 | 41.8 |      1.1 |
-   | Small                     |     56.2 |   -0.0752 | 41.9 |      1.1 |
-   | Micro                     |     57.3 |   -0.0083 | 43.5 |      1.1 |
-   | Tiny                      |     53.6 |   -0.3333 | 34.7 |      1.0 |
-   |---------------------------+----------+-----------+------+----------|
-
-
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
+   | Model                     | ChrF Avg | COMET Avg | BLEU | BLEU Var | Chrf Avg | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
+   | Single greedy AR          |          |           |      |          |          |           |      |          |
+   | Large                     |     59.2 |    0.4110 | 50.5 |      1.3 |     59.2 |    0.4124 | 50.6 |      1.3 |
+   | Base                      |     58.1 |    0.3881 | 47.9 |      1.3 |     58.1 |    0.3875 | 47.9 |      1.2 |
+   |                           |          |           |      |          |          |           |      |          |
+   | Single beam AR            |          |           |      |          |          |           |      |          |
+   | Large                     |     58.8 |    0.4053 | 50.8 |      1.3 |     58.8 |    0.4144 | 47.9 |      1.2 |
+   | Base                      |     57.9 |    0.3873 | 48.0 |      1.3 |     55.1 |    0.2666 | 39.3 |      1.1 |
+   |                           |          |           |      |          |          |           |      |          |
+   | Ensemble beam AR          |          |           |      |          |          |           |      |          |
+   | Large                     |     59.5 |    0.4332 | 52.2 |      1.3 |     59.4 |    0.4303 | 52.2 |      1.3 |
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
+   | Student AR                |     59.5 |    0.4550 | 51.6 |      1.2 |     59.6 |    0.4564 | 51.6 |      1.2 |
+   |                           |          |           |      |          |          |           |      |          |
+   | Non-autoregressive models |          |           |      |          |          |           |      |          |
+   | Large                     |     58.6 |    0.1485 | 47.8 |      1.2 |     58.7 |    0.1442 | 47.7 |      1.2 |
+   | Base                      |     56.3 |   -0.0521 | 41.8 |      1.1 |     56.3 |   -0.0545 | 41.8 |      1.1 |
+   | Small                     |     56.2 |   -0.0752 | 41.9 |      1.1 |     56.2 |   -0.0773 | 41.9 |      1.2 |
+   | Micro                     |     57.3 |   -0.0083 | 43.5 |      1.1 |     57.4 |   -0.0085 | 43.6 |      1.1 |
+   | Tiny                      |     53.6 |   -0.3333 | 34.7 |      1.0 |     53.8 |   -0.3346 | 34.8 |      1.0 |
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
 
 *** En-De quality with Shortlist
 
@@ -72,59 +73,61 @@
 ** German-English
 
    #+NAME: deentrqual
-   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
-   |                           | Full Output: |        |          |         |         |           |      |          |   | With Shortlist: |        |      |         |         |           |      |          |
-   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
-   | Model                     |       ChrF A | Chrf B | ChrF Avg | COMET A | COMET B | COMET Avg | BLEU | BLEU Var |   |          Chrf A | Chrf B |  0.0 | COMET A | COMET B | COMET Avg | BLEU | BLEU Var |
-   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
-   | Single greedy AR          |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
-   | Large                     |         60.2 |   63.5 |     61.9 |  0.5789 |  0.5947 |    0.5868 | 48.4 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
-   | Base                      |         59.5 |   62.4 |     61.0 |  0.5447 |  0.5616 |    0.5532 | 47.0 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
-   |                           |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
-   | Single beam AR            |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
-   | Large                     |         59.9 |   63.1 |     61.5 |  0.5777 |  0.5992 |    0.5885 | 49.2 |      1.2 |   |                 |        |  0.0 |         |         |           |      |          |
-   | Base                      |         59.4 |   62.0 |     60.7 |  0.5453 |  0.5616 |    0.5534 | 47.4 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
-   |                           |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
-   | Ensemble beam AR          |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
-   | Large                     |         60.3 |   63.8 |     62.0 |  0.5818 |  0.6090 |    0.5954 | 50.6 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
-   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
-   | Student AR                |              |        |          |         |         |           |      |          |   |            61.6 |   65.0 | 63.3 |         |         |           | 51.1 |      1.3 |
-   |                           |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |           |      |          |
-   | Non-autoregressive models |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |           |      |          |
-   | Large                     |         60.3 |   63.0 |     61.6 |  0.3207 |  0.3385 |    0.3296 | 46.4 |      1.4 |   |            60.3 |   63.0 | 61.6 |         |         |           | 46.4 |      1.4 |
-   | Base                      |         60.1 |   62.7 |     61.4 |  0.2923 |  0.2991 |    0.2957 | 45.8 |      1.3 |   |            60.1 |   62.7 | 61.4 |         |         |           | 45.7 |      1.3 |
-   | Small                     |         59.9 |   62.2 |     61.0 |  0.2420 |  0.2503 |    0.2462 | 44.6 |      1.3 |   |            59.9 |   62.2 | 61.0 |         |         |           | 44.6 |      1.3 |
-   | Micro                     |         58.5 |   60.8 |     59.6 |  0.1466 |  0.1485 |    0.1475 | 42.3 |      1.4 |   |            58.5 |   60.8 | 59.6 |         |         |           | 42.3 |      1.4 |
-   | Tiny                      |         55.2 |   56.5 |     55.9 | -0.1539 | -0.1578 |   -0.1558 | 34.4 |      1.3 |   |            55.2 |   56.5 | 55.9 |         |         |           | 34.4 |      1.3 |
-   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+---------+------+----------|
+   |                           | Full Output: |        |          |         |         |           |      |          |   | With Shortlist: |        |      |         |         |         |      |          |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+---------+------+----------|
+   | Model                     |       ChrF A | Chrf B | ChrF Avg | COMET A | COMET B | COMET Avg | BLEU | BLEU Var |   |          Chrf A | Chrf B |      | COMET A | COMET B |         | BLEU | BLEU Var |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+---------+------+----------|
+   | Single greedy AR          |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |         |      |          |
+   | Large                     |         60.2 |   63.5 |     61.9 |  0.5789 |  0.5947 |    0.5868 | 48.4 |      1.3 |   |            60.2 |   63.5 | 61.9 |  0.5784 |  0.5947 |  0.5866 | 48.5 |      1.3 |
+   | Base                      |         59.5 |   62.4 |     61.0 |  0.5447 |  0.5616 |    0.5532 | 47.0 |      1.3 |   |            58.5 |   62.4 | 60.5 |  0.5450 |  0.5619 |  0.5534 | 47.1 |      1.3 |
+   |                           |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |         |      |          |
+   | Single beam AR            |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |         |      |          |
+   | Large                     |         59.9 |   63.1 |     61.5 |  0.5777 |  0.5992 |    0.5885 | 49.2 |      1.2 |   |            59.8 |   62.6 | 61.2 |  0.5595 |  0.5723 |  0.5659 | 43.9 |      1.1 |
+   | Base                      |         59.4 |   62.0 |     60.7 |  0.5453 |  0.5616 |    0.5534 | 47.4 |      1.3 |   |            57.0 |   58.9 | 58.0 |  0.4562 |  0.4619 |  0.4591 | 38.5 |      1.2 |
+   |                           |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |         |      |          |
+   | Ensemble beam AR          |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |         |      |          |
+   | Large                     |         60.3 |   63.8 |     62.0 |  0.5818 |  0.6090 |    0.5954 | 50.6 |      1.3 |   |            60.7 |   63.9 | 62.3 |  0.5851 |  0.6090 |  0.5970 | 50.8 |      1.3 |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+---------+------+----------|
+   | Student AR                |         61.6 |   65.0 |     63.3 |  0.5989 |  0.6240 |    0.6115 | 51.1 |      1.3 |   |            61.6 |   65.0 | 63.3 |  0.5988 |  0.6237 |  0.6112 | 51.1 |      1.3 |
+   |                           |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |         |      |          |
+   | Non-autoregressive models |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |         |      |          |
+   | Large                     |         60.3 |   63.0 |     61.6 |  0.3207 |  0.3385 |    0.3296 | 46.4 |      1.4 |   |            60.3 |   63.0 | 61.6 |  0.3200 |  0.3377 |  0.3288 | 46.4 |      1.4 |
+   | Base                      |         60.1 |   62.7 |     61.4 |  0.2923 |  0.2991 |    0.2957 | 45.8 |      1.3 |   |            60.1 |   62.7 | 61.4 |  0.2914 |  0.2413 |  0.2663 | 45.7 |      1.3 |
+   | Small                     |         59.9 |   62.2 |     61.0 |  0.2420 |  0.2503 |    0.2462 | 44.6 |      1.3 |   |            59.9 |   62.2 | 61.0 |  0.2413 |  0.2495 |  0.2454 | 44.6 |      1.3 |
+   | Micro                     |         58.5 |   60.8 |     59.6 |  0.1466 |  0.1485 |    0.1475 | 42.3 |      1.4 |   |            58.5 |   60.8 | 59.6 |  0.1459 |  0.1477 |  0.1468 | 42.3 |      1.4 |
+   | Tiny                      |         55.2 |   56.5 |     55.9 | -0.1539 | -0.1578 |   -0.1558 | 34.4 |      1.3 |   |            55.2 |   56.5 | 55.9 | -0.1542 | -0.1579 | -0.1560 | 34.4 |      1.3 |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+---------+------+----------|
    #+TBLFM: $4=vmean($2..$3);%0.1f
    #+TBLFM: $7=vmean($5..$6);%0.4f
    #+TBLFM: $13=vmean($11..$12);%0.1f
+   #+TBLFM: $16=vmean($14..$15);%0.4f
 
 
 *** Export
-   |---------------------------+----------+-----------+------+----------|
-   | Model                     | ChrF Avg | COMET Avg | BLEU | BLEU Var |
-   |---------------------------+----------+-----------+------+----------|
-   | Single greedy AR          |          |           |      |          |
-   | Large                     |     61.9 |    0.5868 | 48.4 |      1.3 |
-   | Base                      |     61.0 |    0.5532 | 47.0 |      1.3 |
-   |                           |          |           |      |          |
-   | Single beam AR            |          |           |      |          |
-   | Large                     |     61.5 |    0.5885 | 49.2 |      1.2 |
-   | Base                      |     60.7 |    0.5534 | 47.4 |      1.3 |
-   |                           |          |           |      |          |
-   | Ensemble beam AR          |          |           |      |          |
-   | Large                     |     62.0 |    0.5954 | 50.6 |      1.3 |
-   |---------------------------+----------+-----------+------+----------|
-   | Non-autoregressive models |          |           |      |          |
-   | Large                     |     61.6 |    0.3296 | 46.4 |      1.4 |
-   | Base                      |     61.4 |    0.2957 | 45.8 |      1.3 |
-   | Small                     |     61.0 |    0.2462 | 44.6 |      1.3 |
-   | Micro                     |     59.6 |    0.1475 | 42.3 |      1.4 |
-   | Tiny                      |     55.9 |   -0.1558 | 34.4 |      1.3 |
-   |---------------------------+----------+-----------+------+----------|
-
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
+   | Model                     | ChrF Avg | COMET Avg | BLEU | BLEU Var | Chrf Avg | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
+   | Single greedy AR          |          |           |      |          |          |           |      |          |
+   | Large                     |     61.9 |    0.5868 | 48.4 |      1.3 |     61.9 |    0.5866 | 48.5 |      1.3 |
+   | Base                      |     61.0 |    0.5532 | 47.0 |      1.3 |     60.5 |    0.5534 | 47.1 |      1.3 |
+   |                           |          |           |      |          |          |           |      |          |
+   | Single beam AR            |          |           |      |          |          |           |      |          |
+   | Large                     |     61.5 |    0.5885 | 49.2 |      1.2 |     61.2 |    0.5659 | 43.9 |      1.1 |
+   | Base                      |     60.7 |    0.5534 | 47.4 |      1.3 |     58.0 |    0.4591 | 38.5 |      1.2 |
+   |                           |          |           |      |          |          |           |      |          |
+   | Ensemble beam AR          |          |           |      |          |          |           |      |          |
+   | Large                     |     62.0 |    0.5954 | 50.6 |      1.3 |     62.3 |    0.5970 | 50.8 |      1.3 |
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
+   | Student AR                |     63.3 |    0.6115 | 51.1 |      1.3 |     63.3 |    0.6112 | 51.1 |      1.3 |
+   |                           |          |           |      |          |          |           |      |          |
+   | Non-autoregressive models |          |           |      |          |          |           |      |          |
+   | Large                     |     61.6 |    0.3296 | 46.4 |      1.4 |     61.6 |    0.3288 | 46.4 |      1.4 |
+   | Base                      |     61.4 |    0.2957 | 45.8 |      1.3 |     61.4 |    0.2663 | 45.7 |      1.3 |
+   | Small                     |     61.0 |    0.2462 | 44.6 |      1.3 |     61.0 |    0.2454 | 44.6 |      1.3 |
+   | Micro                     |     59.6 |    0.1475 | 42.3 |      1.4 |     59.6 |    0.1468 | 42.3 |      1.4 |
+   | Tiny                      |     55.9 |   -0.1558 | 34.4 |      1.3 |     55.9 |   -0.1560 | 34.4 |      1.3 |
+   |---------------------------+----------+-----------+------+----------+----------+-----------+------+----------|
 
 * Translation on WMT 14
 
@@ -184,30 +187,30 @@
 
 *** Shortlist at 36 CPU cores
 
-    |---------+-------+-------+-------+-------+-------+------+------|
-    | Batch   |     1 |     2 |     4 |     8 |    16 |   32 |   64 |
-    |---------+-------+-------+-------+-------+-------+------+------|
-    | AR Big  |       |       |       |       |       |      |      |
-    | AR Base |       | 27977 | 18914 | 13597 | 10946 | 9643 | 9154 |
-    |---------+-------+-------+-------+-------+-------+------+------|
-    | Large   | 12799 |  9870 |  8245 |  7545 |  7434 | 7511 | 7639 |
-    | Base    |  2549 |  2298 |  2263 |  2306 |  2399 | 2503 | 2609 |
-    | Small   |  1346 |  1246 |  1250 |  1306 |  1399 | 1497 | 1606 |
-    | Micro   |   958 |   897 |   913 |   974 |  1062 | 1163 | 1271 |
-    | Tiny    |   244 |   246 |   273 |   316 |   373 |  437 |  506 |
-    |---------+-------+-------+-------+-------+-------+------+------|
+    |---------+-------+-------+-------+-------+-------+------+------+------|
+    | Batch   |     1 |     2 |     4 |     8 |    16 |   32 |   64 |  128 |
+    |---------+-------+-------+-------+-------+-------+------+------+------|
+    | AR Big  |       |       |       |       | 10939 | 9651 | 9124 | 9067 |
+    | AR Base |       | 27977 | 18914 | 13597 | 10946 | 9643 | 9154 | 9090 |
+    |---------+-------+-------+-------+-------+-------+------+------+------|
+    | Large   | 12799 |  9870 |  8245 |  7545 |  7434 | 7511 | 7639 |      |
+    | Base    |  2549 |  2298 |  2263 |  2306 |  2399 | 2503 | 2609 | 2707 |
+    | Small   |  1346 |  1246 |  1250 |  1306 |  1399 | 1497 | 1606 | 1714 |
+    | Micro   |   958 |   897 |   913 |   974 |  1062 | 1163 | 1271 | 1380 |
+    | Tiny    |   244 |   246 |   273 |   316 |   373 |  437 |  506 |  581 |
+    |---------+-------+-------+-------+-------+-------+------+------+------|
 
 **** Export
 
     | Batch | AR Big | AR Base | Large | Base | Small | Micro | Tiny |
-    |     1 |        |         | 12799 | 2549 |  1346 |   958 |  244 |
+    |     1 |        |   41168 | 12799 | 2549 |  1346 |   958 |  244 |
     |     2 |        |   27977 |  9870 | 2298 |  1246 |   897 |  246 |
     |     4 |        |   18914 |  8245 | 2263 |  1250 |   913 |  273 |
     |     8 |        |   13597 |  7545 | 2306 |  1306 |   974 |  316 |
-    |    16 |        |   10946 |  7434 | 2399 |  1399 |  1062 |  373 |
-    |    32 |        |    9643 |  7511 | 2503 |  1497 |  1163 |  437 |
-    |    64 |        |    9154 |  7639 | 2609 |  1606 |  1271 |  506 |
-
+    |    16 |  10939 |   10946 |  7434 | 2399 |  1399 |  1062 |  373 |
+    |    32 |   9643 |    9643 |  7511 | 2503 |  1497 |  1163 |  437 |
+    |    64 |   9124 |    9154 |  7639 | 2609 |  1606 |  1271 |  506 |
+    |   128 |   9067 |         |       | 2707 |  1714 |  1380 |  582 |
 
 
 
@@ -277,6 +280,20 @@
      | Micro           | 2322 |  1345 |   833 |   544 |  433 |  367 |  332 |  311 |
      | Tiny            | 1360 |   780 |   503 |   367 |  301 |  273 |  252 |  243 |
      |-----------------+------+-------+-------+-------+------+------+------+------|
+
+     |-----------------+------+------+-------+-------+------+------+------+------|
+     | WITH SHORTLIST  |    1 |    2 |     4 |     8 |   16 |   32 |   64 |  128 |
+     |-----------------+------+------+-------+-------+------+------+------+------|
+     | AR Large        |      |      |       |       |      |      |      |      |
+     | AR Base (stdnt) |      |      | 25968 | 14302 | 7098 | 4232 | 2533 | 1393 |
+     |-----------------+------+------+-------+-------+------+------+------+------|
+     | Large           | 7242 | 4089 |  2327 |  1573 | 1178 |  975 |  847 |  775 |
+     | Base            | 6273 | 3369 |  1871 |  1162 |  817 |  642 |  549 |  485 |
+     | Small           | 3287 | 1857 |  1041 |   705 |  515 |  437 |  380 |  361 |
+     | Micro           | 2385 | 1304 |   790 |   542 |  440 |  366 |  331 |  311 |
+     | Tiny            | 1381 |  762 |   502 |   368 |  306 |  273 |  252 |  243 |
+     |-----------------+------+------+-------+-------+------+------+------+------|
+
 
 ***** Export
 
