--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -1,9 +1,59 @@
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Introduction}
+\chapter{Introduction}%
 \label{chap:intro}
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\JH{Write the introduction.}
+\Ac{mt} has always been the holy grail of computational linguistics. The first
+attemtps to use algorithms for translation date back to before the field of
+computational linguistics was even established. By 1950s, researchers began to
+develop automatic translation systems on computers. During the following
+decades, using rule-based translation backed up by a linguistic theory has been
+the mainstream paradigm. Even in the early days, \ac{mt} systems were used in a
+number of applications, such as translation of technical manuals and similar
+texts with a simple structure and low language variety.
+
+In the late 1980s and early 1990s, the technological progress enabled computers
+to work with larger textual data, and the first statistical methods for \ac{mt}
+were concieved. Instead of having roots in linguistics, statistical \ac{mt} is
+founded on the information theory. This paradigm shift made it possible to use
+the same methods for different language pairs without additional costs for
+hand-crafting the rules for translation systems. As the computational power of
+computers and size of the available data and the computational power of the
+grew bigger throughout 1990s and 2000s, statistical methods became the standard
+approach to \ac{mt}. Those days, automatic \ac{mt} started to attract a wide
+interest from the public with the first general-purpose translation systems
+available on the Internet.
+
+In parallel with \ac{mt} research, the field of \ac{ai} has written its own
+history. From the first neurology-inspired algorithms in the 1950s and the
+formulation of the Turing test, through the so called \ac{ai} winter periods
+and the development of artificial neural networks and the backpropagation
+algorithm, culminating during the last decade in the advent of deep learning.
+Not unlike \ac{mt}, the research advancements in \ac{ai} owe their existence to
+faster and more powerful computers.
+
+In the past decade, the fields of \ac{ai} and \ac{mt} fused together, resulting
+in a new paradigm of \emph{\acl{nmt}} (\acs{nmt}\glsunset{nmt}). Soon after
+\ac{nmt} was established as the new state of the art approach to translation,
+high-performing systems became available online for the general public and the
+whole field of \ac{mt} started growing rapidly. Whereas in the early stages,
+\ac{mt} development was focused on a few selected languages, mostly translating
+in or out of English, nowadays the research is slowly expanding towards
+low-resource languages or to different areas such as multimodal or multilingual
+translation. One of the emerging research subfields motivated by making
+\ac{nmt} models more accessible is \emph{\acl{nar}} \ac{nmt}, which is the main
+topic of this thesis.
+
+% \JH{advent of NMT methods, už to je hrozně dobrý a tak to všichni používaji}
+% \JH{masový rozšiřování aplikací jak pro uživatele (low resource MT), různé
+% domény, tak jednotlivý scénáře (computer aided tranlsation možá začíná dávat
+% smysl)}
+
+% \JH{rychle se vyvijejici vyzkum MT, objevuji se i zajimavy druhy NMT modelů a
+%   taky se hodne rychle ujima v aplikacich.}
+% \JH{spoustu zajímavých oborů jako třeba multimodální překlad, multi-source překlad, a taky non-autoregresivní překlad}
+
+\vspace{\baselineskip}
 
 This thesis is structured as follows.
 %
@@ -54,7 +104,7 @@ efficient \acl{ar} translation models leads to better results, both in terms of
 speed and translation quality. We argue that for better estimation of the
 benefits of \acl{nar} methods, the future research should take into account the
 methods employed in production-ready systems.
-
+%
 We conclude the thesis in Chapter \ref{chap:conclusions}.
 
 %%% Local Variables:
